# cs480_hw1

./: CMakeLists.txt  README.md
cmake/: testing.cmake
cpp/: CMakeLists.txt
cpp/include/: Board_4x4.hpp  search.hpp
cpp/src/: Board_4x4.cpp  CMakeLists.txt  board.cpp  main.cpp  search.cpp
cpp/tests/: CMakeLists.txt
cpp/tests/src/: CMakeLists.txt
cpp/tests/src/Board_4x4/: CMakeLists.txt  constructor.cpp  generate_moves.cpp  move_validity.cpp  printing.cpp
